SERVER-83221 Add the TTL, expireAfterSeconds, to clustered index info on getIndexes(). (#17813)

GitOrigin-RevId: 204dddfb1bcf3139ec6085cda132fa02a76a6b77