src/mongo/db/catalog/index_key_validate.cpp
@@ -119,8 +119,9 @@ static const std::set<StringData> allowedClusteredIndexFieldNames = {
     ClusteredIndexSpec::kUniqueFieldName,
     ClusteredIndexSpec::kVFieldName,
     ClusteredIndexSpec::kKeyFieldName,
-    // This is for indexSpec creation only.
+    // These are for indexSpec creation only.
     IndexDescriptor::kClusteredFieldName,
+    IndexDescriptor::kExpireAfterSecondsFieldName,
 };
 
 /**
